# csc116ModernCplusplus

./: kattis.org
idioms/: idioms_01.org  idioms_02.org  idioms_03.org  idioms_04.org  idioms_05.org  idioms_06.org  idioms_07.org  idioms_08.org  idioms_09.org
lectures/: .gitignore  l-05-exceptions.org
lectures/l-01-1-intro/: 01_1_intro.org  01_lecture.org  dmg.txt  hello.cpp
lectures/l-02-1-types/: 02_1_types.org  02_2_scope.org  02_3_references.org
lectures/l-03-strings/: 03_01_strings.org  dmg.txt  read.cpp
lectures/l-04-vectors/: 04_01_vectors.org  04_02_vectors.org  mycode.hpp
lectures/l-05-expressions/: 01-expressions.org  02-expressions.org
lectures/l-06-exceptions/: l-06-exceptions.org
lectures/l-07-classes/: 01-classes.org  02-classes.org  03-classes.org  groceries.txt  groceries2.txt
lectures/l-07-functions/: 01-functions.org  02-functions.org  03-assert.org
lectures/l-08-io/: 1-io.org  2-io.org  groceries.txt  groceries3.txt  groceriesUnix.txt  input.txt
lectures/l-09-seq-containers/: 01-seq-containers.org  02-string.org
lectures/l-10-algorithms/: 01-algorithms.org
lectures/l-11-assoc-containers/: 01-assoc-containers.org  02-assoc-containers.org
lectures/l-12-dynamic-memory/: diagrams.org  l-12-dynamic-memory.org
lectures/l-15-oop/: 01-oop.org
lectures/l-16-templates/: 01-templates.org
lectures/l-17-functional/: 01-functional.org  example.txt
lectures/l01/: 01_lecture.org  CMakeLists.txt  hello.cpp  vector.cpp
